# mlflow_template

./: .gitignore  MLproject  Makefile  README.md  fetch-model-from-registery.py  model-titanic.py  pyproject.toml  python_env.yaml
setting/: setter.py
transfo/: preporcessing.py
