[tool.poetry]
name = "template-mlflow-gcp-base"
version = "0.1.0"
description = ""
authors = ["JojoBizarreVenom <jonathan@venom.engineering>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
mlflow = "^2.16.0"
typer = "^0.12.5"
loguru = "^0.7.2"
tpot = "^0.12.2"
setuptools = "^75.1.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
